Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Fixed #1814 "Misconfiguration of last_login_time default value in members
  schema" by improving the logged_in.py script.
- Fixed root creation when no portal_type nor meta_type is specified.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 