@@ -5,8 +5,9 @@
 
 from Products.CPSDefault.recursivepublish import recursivePublish
 
+target_section_rpath = REQUEST.form.get('target_section_rpath')
 proxy = context
-recursivePublish(workspace=proxy, context=context)
+recursivePublish(proxy, target_section_rpath, context)
 
 url = proxy.absolute_url()
 psm = 'psm_recursive_publish_done'
