@@ -550,7 +550,8 @@ ol, ul {
   padding: 0em 0em 0.4em 0em;
 }
 
-ul.fileChoice {
+ul.fileChoice,
+ul.itemInputList {
   padding-left: 0;
   list-style-type: None;
 }
