@@ -3,7 +3,8 @@ Requires
 -
 New features
 ~~~~~~~~~~~~
--
+- Added a target section selection for #1807 
+  "Provide a mean to publish all the contents of a tree structure in one go".
 Bug fixes
 ~~~~~~~~~
 - Fixed #1814 "Misconfiguration of last_login_time default value in members
